[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greenai-scheduler"
version = "0.1.0"
description = "Carbon-aware RL environment for GPU workload scheduling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.25.0",
    "openai>=2.7.2",
    "pyyaml>=6.0"
]

[tool.setuptools]
py-modules = ["main", "inference"]