[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "greenai-scheduler"
version = "1.0.0"
description = "Carbon-aware RL environment"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "requests",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["server"]
